# PakePlus

.github/workflows/: build.yml
scripts/: ppconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/utils/: init.rs
